# aegis

./: .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  deps-installer.sh  install-dependencies.sh
project/: aegis-win.vcxproj  aegis-win.vcxproj.filters  aegis.sln  aegis.vcxproj  aegis.vcxproj.filters  aegisbot.sln  aegisbot.vcxproj  aegisbot.vcxproj.filters  config.json
src/: ABCache.cpp  ABCache.h  ABMemoryCache.cpp  ABMemoryCache.h  ABMessage.h  ABRedisCache.cpp  ABRedisCache.h  AegisAdmin.cpp  AegisAdmin.h  AegisBot.cpp  AegisBot.h  AegisModule.h  AegisOfficial.cpp  AegisOfficial.h  AuctionBot.cpp  AuctionBot.h  Bot.cpp  Bot.h  Channel.cpp  Channel.h  ExampleBot.cpp  ExampleBot.h  Guild.cpp  Guild.h  Member.cpp  Member.h  Permission.h  RateLimits.h  Role.h  exceptions.h  main.cpp  rss.h
